src/test/resources/annotator/UnresolvedFileReference.proto
syntax = "proto3";

package annotator;

import <error descr="File not found">"unresolved/file"</error>;
